<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pe_bg_light_blue"
    android:orientation="vertical" >

    <include layout="@layout/common_title" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/login_tips"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/white">
        <LinearLayout
            android:id="@+id/llweixinlogin"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="match_parent">

            <ImageView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_weixin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textColor="@color/live_china_black"
                android:text="@string/weixing"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/llqqlogin"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:src="@drawable/login_qq"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textColor="@color/live_china_black"
                android:text="QQ"/>

        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/llsinalogin"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:src="@drawable/login_sina"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textColor="@color/live_china_black"
                android:text="@string/login_sina"/>

        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/login_cntv"
        android:textColor="@color/colorPrimaryDark"
       />

    <LinearLayout
        android:id="@+id/login_in_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical" >


            <cn.cntv.app.ipanda.view.ClearEditText
                android:id="@+id/edit_account"
                android:layout_width="match_parent"
                android:layout_height="132px"
                android:background="@drawable/pe_shape_border_gray"
                android:hint="@string/login_account_hint"
                android:padding="5dp"
                android:textSize="14sp"
                android:textColorHint="#c9c9c9"
                android:textColor="@color/gray"
                android:textCursorDrawable="@null" />


            <TextView
                android:id="@+id/hint_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff0000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <cn.cntv.app.ipanda.view.ClearEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="132px"
                android:background="@drawable/pe_shape_border_gray"
                android:hint="@string/login_password_hint"
                android:padding="5dp"
                android:textColorHint="#c9c9c9"
                android:password="true"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:textCursorDrawable="@null" />



            <TextView
                android:id="@+id/hint_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff0000" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/personal_login_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:textColor="@color/colorPrimaryDark" />
        </RelativeLayout>

        <TextView
            android:id="@+id/loding_btn"
            android:layout_width="match_parent"
            android:layout_height="132px"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/pe_login_view_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/login_btn"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>