<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_zc_send_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_half"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:background="@color/cctv_grey2"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvCusDialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/dialog_title"
            android:textColor="@color/home_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/cctv_grey" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnCusDialogCancle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cctv_grey2"
                android:padding="10dp"
                android:text="@string/dialog_cancle"
                android:textColor="@color/home_text"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/cctv_grey" >
            </LinearLayout>

            <Button
                android:id="@+id/btnCusDialogConfirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cctv_grey2"
                android:padding="10dp"
                android:text="@string/dialog_login"
                android:textColor="@color/home_text"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>