<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_half"
    android:gravity="center" >

    <include
        layout="@layout/common_title"
        android:visibility="invisible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="600px"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/def_no_iv"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/layout_otherTip"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/pe_dialog_tips_view_bg"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:textColor="#000000"
                android:gravity="center_horizontal"
                android:text="@string/player_tip1"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/hline_height"
                android:background="@color/tab_top_line_color" >
            </LinearLayout>

            <LinearLayout
                android:background="@drawable/pe_dialog_tips_view_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:background="@drawable/pe_dialog_tips_view_bg"
                    android:text="@string/watch_cancel"
                    android:textSize="14sp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:id="@+id/ll_tips_line"
                    android:layout_width="@dimen/hline_height"
                    android:layout_height="fill_parent"
                    android:background="@color/tab_top_line_color" >
                </LinearLayout>

                <TextView
                    android:id="@+id/btn_ok"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/pe_dialog_tips_view_bg"
                    android:padding="10dp"
                    android:text="@string/watch_continue"
                    android:textColor="@color/crimson"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>